feat: improve shopping-cart and checkout pattern | sas

--- a/patterns/shop-shopping-cart/index.html
+++ b/patterns/shop-shopping-cart/index.html
@@ -24,12 +24,12 @@
                  src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
                  height="1080" alt="Some alternative text for screen readers describing the image"/>
           </div>
-          <div>
+          <div class="shopping-cart-list__meta">
             <p-heading size="medium" tag="h3">EvoKNIT® Trainers II</p-heading>
-            <p-text weight="semi-bold">SDG 329</p-text>
+            <p-text size="x-small" weight="semi-bold">SDG 329</p-text>
             <div class="shopping-cart-list__variant">
-              <p-text>Color <b>Black</b></p-text>
-              <p-text>Size <b>12</b></p-text>
+              <p-text size="x-small">Color <b>Black</b></p-text>
+              <p-text size="x-small">Size <b>12</b></p-text>
             </div>
             <div class="shopping-cart-list__amount">
               <p-button-pure icon="minus" hide-label="true">Decrease product amount</p-button-pure>
@@ -45,12 +45,12 @@
                  src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
                  height="1080" alt="Some alternative text for screen readers describing the image"/>
           </div>
-          <div>
+          <div class="shopping-cart-list__meta">
             <p-heading size="medium" tag="h3">EvoKNIT® Trainers II</p-heading>
-            <p-text weight="semi-bold">SDG 329</p-text>
+            <p-text size="x-small" weight="semi-bold">SDG 329</p-text>
             <div class="shopping-cart-list__variant">
-              <p-text>Color <b>Black</b></p-text>
-              <p-text>Size <b>12</b></p-text>
+              <p-text size="x-small">Color <b>Black</b></p-text>
+              <p-text size="x-small">Size <b>12</b></p-text>
             </div>
             <div class="shopping-cart-list__amount">
               <p-button-pure icon="minus" hide-label="true">Decrease product amount</p-button-pure>
@@ -66,12 +66,12 @@
                  src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
                  height="1080" alt="Some alternative text for screen readers describing the image"/>
           </div>
-          <div>
+          <div class="shopping-cart-list__meta">
             <p-heading size="medium" tag="h3">EvoKNIT® Trainers II</p-heading>
-            <p-text weight="semi-bold">SDG 329</p-text>
+            <p-text size="x-small" weight="semi-bold">SDG 329</p-text>
             <div class="shopping-cart-list__variant">
-              <p-text>Color <b>Black</b></p-text>
-              <p-text>Size <b>12</b></p-text>
+              <p-text size="x-small">Color <b>Black</b></p-text>
+              <p-text size="x-small">Size <b>12</b></p-text>
             </div>
             <div class="shopping-cart-list__amount">
               <p-button-pure icon="minus" hide-label="true">Decrease product amount</p-button-pure>
@@ -87,12 +87,12 @@
                  src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
                  height="1080" alt="Some alternative text for screen readers describing the image"/>
           </div>
-          <div>
+          <div class="shopping-cart-list__meta">
             <p-heading size="medium" tag="h3">EvoKNIT® Trainers II</p-heading>
-            <p-text weight="semi-bold">SDG 329</p-text>
+            <p-text size="x-small" weight="semi-bold">SDG 329</p-text>
             <div class="shopping-cart-list__variant">
-              <p-text>Color <b>Black</b></p-text>
-              <p-text>Size <b>12</b></p-text>
+              <p-text size="x-small">Color <b>Black</b></p-text>
+              <p-text size="x-small">Size <b>12</b></p-text>
             </div>
             <div class="shopping-cart-list__amount">
               <p-button-pure icon="minus" hide-label="true">Decrease product amount</p-button-pure>
@@ -118,12 +118,16 @@
           <p-text>SGD 25.19</p-text>
         </div>
         <div>
+          <p-text>Promo Code</p-text>
+          <p-text>SDG -40.00</p-text>
+        </div>
+        <div>
           <p-text>Shipping</p-text>
           <p-text>SDG 0.00</p-text>
         </div>
         <div>
           <p-text weight="semi-bold">Grand Total</p-text>
-          <p-text weight="semi-bold">SDG 365.19</p-text>
+          <p-text weight="semi-bold">SDG 325.19</p-text>
         </div>
       </div>
       <div class="shopping-cart__checkout">
@@ -155,7 +159,7 @@
         </div>
         <div class="promo-gift__group">
           <div class="promo-gift__status">
-            <p-text>Your Discout Code was accepted!</p-text>
+            <p-text>Your Promo Code was accepted!</p-text>
             <p-text color="contrast-medium" size="xx-small">2NSB-PTQM-7VTG-F77MF</p-text>
             <p-button-pure icon="delete" hide-label="true">Remove code</p-button-pure>
           </div>
