feat: improve grid productive poc pattern | sas

--- a/patterns/grid-productive/index.html
+++ b/patterns/grid-productive/index.html
@@ -11,14 +11,27 @@
 <div id="app">
   <header data-label="Header"></header>
   <main>
-    <div class="tile tile--full">Full</div>
-    <div class="tile tile--one-half">One Half</div>
-    <div class="tile tile--one-half">One Half</div>
-    <div class="tile tile--one-third">One Third</div>
-    <div class="tile tile--one-third">One Third</div>
-    <div class="tile tile--one-third">One Third</div>
-    <div class="tile tile--one-third">One Third</div>
-    <div class="tile tile--two-thirds">Two Thirds</div>
+
+      <div class="module">
+        <div class="tile tile--full">Full</div>
+      </div>
+
+      <div class="module">
+        <div class="tile tile--one-half">One Half</div>
+        <div class="tile tile--one-half">One Half</div>
+      </div>
+
+      <div class="module">
+        <div class="tile tile--one-third">One Third</div>
+        <div class="tile tile--one-third">One Third</div>
+        <div class="tile tile--one-third">One Third</div>
+      </div>
+
+      <div class="module">
+        <div class="tile tile--one-third">One Third</div>
+        <div class="tile tile--two-thirds">Two Thirds</div>
+      </div>
+
   </main>
   <aside data-label="Sidebar"></aside>
   <aside data-label="Sidebar"></aside>
