--- a/patterns/grid-productive/index.html
+++ b/patterns/grid-productive/index.html
@@ -9,33 +9,31 @@
 <body>
 
 <div id="app">
-  <header data-label="Header"></header>
+  <header>
+    <button class="toggle-sidebar-left">Toggle Sidebar Left</button>
+    <button class="toggle-sidebar-right">Toggle Sidebar Right</button>
+  </header>
   <main>
-
-      <div class="module">
-        <div class="tile tile--full">Full</div>
-      </div>
-
-      <div class="module">
-        <div class="tile tile--one-half">One Half</div>
-        <div class="tile tile--one-half">One Half</div>
-      </div>
-
-      <div class="module">
-        <div class="tile tile--one-third">One Third</div>
-        <div class="tile tile--one-third">One Third</div>
-        <div class="tile tile--one-third">One Third</div>
-      </div>
-
-      <div class="module">
-        <div class="tile tile--one-third">One Third</div>
-        <div class="tile tile--two-thirds">Two Thirds</div>
-      </div>
-
+    <div class="module">
+      <div class="tile tile--full">Full</div>
+    </div>
+    <div class="module">
+      <div class="tile tile--one-half">One Half</div>
+      <div class="tile tile--one-half">One Half</div>
+    </div>
+    <div class="module">
+      <div class="tile tile--one-third">One Third</div>
+      <div class="tile tile--one-third">One Third</div>
+      <div class="tile tile--one-third">One Third</div>
+    </div>
+    <div class="module">
+      <div class="tile tile--one-third">One Third</div>
+      <div class="tile tile--two-thirds">Two Thirds</div>
+    </div>
   </main>
-  <aside data-label="Sidebar"></aside>
-  <aside data-label="Sidebar"></aside>
-  <footer data-label="Footer"></footer>
+  <aside data-open></aside>
+  <aside data-open></aside>
+  <footer></footer>
 </div>
 
 <script type="module" src="main.js"></script>
