feat: improve grid productive poc pattern | sas

--- a/patterns/grid-productive/index.html
+++ b/patterns/grid-productive/index.html
@@ -31,8 +31,12 @@
       <div class="tile tile--two-thirds">Two Thirds</div>
     </div>
   </main>
-  <aside data-open></aside>
-  <aside data-open></aside>
+  <aside data-open>
+    <button class="toggle-sidebar-left">Toggle Sidebar Left</button>
+  </aside>
+  <aside data-open>
+    <button class="toggle-sidebar-right">Toggle Sidebar Right</button>
+  </aside>
   <footer></footer>
 </div>
 
