feat(grid-productive): add twitter:image meta | hj

--- a/patterns/grid-productive/index.html
+++ b/patterns/grid-productive/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Porsche – Grid Productive"/>
   <meta property="og:image" content="https://porsche-design-system.github.io/porsche-design-system/og-image.png">
-  <meta property="twitter:image" content="https://porsche-design-system.github.io/porsche-design-system/og-image.png">
+  <meta name="twitter:image" content="https://porsche-design-system.github.io/porsche-design-system/og-image.png">
   <title>Porsche – Grid Productive</title>
 </head>
 <body>
