--- a/patterns/grid-productive/index.html
+++ b/patterns/grid-productive/index.html
@@ -6,6 +6,10 @@
   <meta name="description" content="Porsche – Grid Productive"/>
   <meta property="og:image" content="https://porsche-design-system.github.io/porsche-design-system/og-image.png">
   <meta name="twitter:image" content="https://porsche-design-system.github.io/porsche-design-system/og-image.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image:alt" content="Porsche Wordmark">
+  <meta name="twitter:title" content="Porsche – Grid Productive">
+  <meta name="twitter:description" content="Pattern to illustrate the usage of the pds-grid-productive">
   <title>Porsche – Grid Productive</title>
 </head>
 <body>
