refactor: use local assets | hj

--- a/patterns/shop-checkout/index.html
+++ b/patterns/shop-checkout/index.html
@@ -137,8 +137,8 @@
     <div class="shopping-cart">
       <div class="shopping-cart__products">
         <a href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt=""/>
           <span>
             <b>Porsche Bracelet</b>
@@ -147,8 +147,8 @@
           <span>911,00 €</span>
         </a>
         <a href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/sneaker@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/sneaker.webp" width="960"
+          <img srcset="/assets/sneaker@2x.webp 2x"
+               src="/assets/sneaker.webp" width="960"
                height="1080" alt=""/>
           <span>
             <b>Porsche Bracelet</b>
@@ -157,8 +157,8 @@
           <span>911,00 €</span>
         </a>
         <a href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/sneaker@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/sneaker.webp" width="960"
+          <img srcset="/assets/sneaker@2x.webp 2x"
+               src="/assets/sneaker.webp" width="960"
                height="1080" alt=""/>
           <span>
             <b>Porsche Bracelet</b>
@@ -167,8 +167,8 @@
           <span>911,00 €</span>
         </a>
         <a href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/backpack@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/backpack.webp" width="960"
+          <img srcset="/assets/backpack@2x.webp 2x"
+               src="/assets/backpack.webp" width="960"
                height="1080" alt=""/>
           <span>
             <b>EvoKNIT® Trainers II</b>
