--- a/patterns/shop-product-detail/index.html
+++ b/patterns/shop-product-detail/index.html
@@ -126,8 +126,8 @@
   <div slot="header">
     <p-heading tag="h2" size="large">Added to Cart</p-heading>
   </div>
-  <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-       src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+  <img srcset="/assets/weekender@2x.webp 2x"
+       src="/assets/weekender.webp" width="960"
        height="1080" alt="Some alternative text for screen readers describing the image"/>
   <div class="flyout-add-to-cart__header">
     <p-heading tag="h3" size="large">EviKnit® Trainers II</p-heading>
