--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -76,75 +76,75 @@
       <div class="products__list">
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }"
                              heading="Porsche Wappen-Schlüsselanhänger Charging Service" price="1.911,00 €" href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }" heading="T-Shirt Wappen - Essential"
                              price="1.911,00 €" href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }"
                              heading="T-Shirt Unisex - Transformers: Rise of the Beasts x Porsche" price="1.911,00 €"
                              href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }" heading="Jacke - Taycan" price="1.911,00 €"
                              href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }" heading="Polo-Shirt Wappen - Essential"
                              price="1.911,00 €" href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }" heading="Fleecejacke Unisex - MARTINI RACING®"
                              price="1.911,00 €" href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }" heading="T-Shirt - Sport" price="1.911,00 €"
                              href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }" heading="Park Unisex - Urban Explorer"
                              price="1.911,00 €" href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }" heading="Slides" price="1.911,00 €" href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }" heading="Fahrzeugschlüssel" price="1.911,00 €"
                              href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }" heading="Seitenwangen im MARTINI RACING® Design"
                              price="1.911,00 €" href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }"
                              heading="Radnabenabdeckungen in Aurum (seidenglanz) mit monochromem Porsche Wappen"
                              price="1.911,00 €" href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
       </div>
@@ -265,8 +265,8 @@
   <div slot="header">
     <p-heading tag="h2" size="large">Add to Wishlist</p-heading>
   </div>
-  <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-       src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+  <img srcset="/assets/weekender@2x.webp 2x"
+       src="/assets/weekender.webp" width="960"
        height="1080" alt="Some alternative text for screen readers describing the image"/>
   <div class="flyout-wishlist__header">
     <p-heading tag="h3" size="large">EviKnit® Trainers II</p-heading>
@@ -314,22 +314,22 @@
   </p-text-field-wrapper>
   <div class="flyout-search__results">
     <a href="#">
-      <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-           src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+      <img srcset="/assets/weekender@2x.webp 2x"
+           src="/assets/weekender.webp" width="960"
            height="1080" alt=""/>
       <b>Weekender</b>
       911,00 €
     </a>
     <a href="#">
-      <img srcset="https://porsche-design-system.github.io/porsche-design-system/sneaker@2x.webp 2x"
-           src="https://porsche-design-system.github.io/porsche-design-system/sneaker.webp" width="960"
+      <img srcset="/assets/sneaker@2x.webp 2x"
+           src="/assets/sneaker.webp" width="960"
            height="1080" alt=""/>
       <b>Sneaker</b>
       911,00 €
     </a>
     <a href="#">
-      <img srcset="https://porsche-design-system.github.io/porsche-design-system/backpack@2x.webp 2x"
-           src="https://porsche-design-system.github.io/porsche-design-system/backpack.webp" width="960"
+      <img srcset="/assets/backpack@2x.webp 2x"
+           src="/assets/backpack.webp" width="960"
            height="1080" alt=""/>
       <b>Porsche Wappen-Schlüsselanhänger Charging Service</b>
       911,00 €
