--- a/patterns/shop-shopping-cart/index.html
+++ b/patterns/shop-shopping-cart/index.html
@@ -20,8 +20,8 @@
       <ul>
         <li>
           <div class="shopping-cart-list__image">
-            <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-                 src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+            <img srcset="/assets/weekender@2x.webp 2x"
+                 src="/assets/weekender.webp" width="960"
                  height="1080" alt="Some alternative text for screen readers describing the image"/>
           </div>
           <div class="shopping-cart-list__meta">
@@ -41,8 +41,8 @@
         </li>
         <li>
           <div class="shopping-cart-list__image">
-            <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-                 src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+            <img srcset="/assets/weekender@2x.webp 2x"
+                 src="/assets/weekender.webp" width="960"
                  height="1080" alt="Some alternative text for screen readers describing the image"/>
           </div>
           <div class="shopping-cart-list__meta">
@@ -62,8 +62,8 @@
         </li>
         <li>
           <div class="shopping-cart-list__image">
-            <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-                 src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+            <img srcset="/assets/weekender@2x.webp 2x"
+                 src="/assets/weekender.webp" width="960"
                  height="1080" alt="Some alternative text for screen readers describing the image"/>
           </div>
           <div class="shopping-cart-list__meta">
@@ -83,8 +83,8 @@
         </li>
         <li>
           <div class="shopping-cart-list__image">
-            <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-                 src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+            <img srcset="/assets/weekender@2x.webp 2x"
+                 src="/assets/weekender.webp" width="960"
                  height="1080" alt="Some alternative text for screen readers describing the image"/>
           </div>
           <div class="shopping-cart-list__meta">
