--- a/patterns/shop-homepage/index.html
+++ b/patterns/shop-homepage/index.html
@@ -83,20 +83,20 @@
         </div>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }" heading="Weekender" price="911,00 €"
                              like-button="false" href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+          <img srcset="/assets/weekender@2x.webp 2x"
+               src="/assets/weekender.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }" heading="Backpack" price="911,00 €"
                              like-button="false" href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/backpack@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/backpack.webp" width="960"
+          <img srcset="/assets/backpack@2x.webp 2x"
+               src="/assets/backpack.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
         <p-link-tile-product aspect-ratio="{ base: '9:16', xs: '3:4' }" heading="Sneaker" price="911,00 €"
                              like-button="false" href="#">
-          <img srcset="https://porsche-design-system.github.io/porsche-design-system/sneaker@2x.webp 2x"
-               src="https://porsche-design-system.github.io/porsche-design-system/sneaker.webp" width="960"
+          <img srcset="/assets/sneaker@2x.webp 2x"
+               src="/assets/sneaker.webp" width="960"
                height="1080" alt="Some alternative text for screen readers describing the image"/>
         </p-link-tile-product>
       </p-carousel>
@@ -193,22 +193,22 @@
   </p-text-field-wrapper>
   <div class="flyout-search__results">
     <a href="#">
-      <img srcset="https://porsche-design-system.github.io/porsche-design-system/weekender@2x.webp 2x"
-           src="https://porsche-design-system.github.io/porsche-design-system/weekender.webp" width="960"
+      <img srcset="/assets/weekender@2x.webp 2x"
+           src="/assets/weekender.webp" width="960"
            height="1080" alt=""/>
       <b>Weekender</b>
       911,00 €
     </a>
     <a href="#">
-      <img srcset="https://porsche-design-system.github.io/porsche-design-system/sneaker@2x.webp 2x"
-           src="https://porsche-design-system.github.io/porsche-design-system/sneaker.webp" width="960"
+      <img srcset="/assets/sneaker@2x.webp 2x"
+           src="/assets/sneaker.webp" width="960"
            height="1080" alt=""/>
       <b>Sneaker</b>
       911,00 €
     </a>
     <a href="#">
-      <img srcset="https://porsche-design-system.github.io/porsche-design-system/backpack@2x.webp 2x"
-           src="https://porsche-design-system.github.io/porsche-design-system/backpack.webp" width="960"
+      <img srcset="/assets/backpack@2x.webp 2x"
+           src="/assets/backpack.webp" width="960"
            height="1080" alt=""/>
       <b>Porsche Wappen-Schlüsselanhänger Charging Service</b>
       911,00 €
