fix: rename flyout navigation component integration | sas

--- a/patterns/shop-homepage/index.html
+++ b/patterns/shop-homepage/index.html
@@ -216,8 +216,8 @@
   </div>
 </p-flyout>
 
-<p-flyout-navigation id="flyout-menu" aria="{'aria-label': 'Main navigation'}">
-  <p-flyout-navigation-item identifier="women" label="Women">
+<p-flyout-multilevel id="flyout-menu" aria="{'aria-label': 'Main navigation'}">
+  <p-flyout-multilevel-item identifier="women" label="Women">
     <p-link-tile
       href="#"
       label="Martini Racing® Collection"
@@ -252,8 +252,8 @@
     <a href="#">Essential</a>
     <a href="#">Motorsport</a>
     <a href="#">View all</a>
-  </p-flyout-navigation-item>
-  <p-flyout-navigation-item identifier="men" label="Men">
+  </p-flyout-multilevel-item>
+  <p-flyout-multilevel-item identifier="men" label="Men">
     <p-link-tile
       href="#"
       label="Martini Racing® Collection"
@@ -291,8 +291,8 @@
     <a href="#">Essential</a>
     <a href="#">Motorsport</a>
     <a href="#">View all</a>
-  </p-flyout-navigation-item>
-  <p-flyout-navigation-item identifier="kids" label="Kids">
+  </p-flyout-multilevel-item>
+  <p-flyout-multilevel-item identifier="kids" label="Kids">
     <p-link-tile
       href="#"
       label="Playmobil® 911 Carrera RS 2.7"
@@ -311,8 +311,8 @@
     <h3>Accessories</h3>
     <a href="#">Toys</a>
     <a href="#">View all</a>
-  </p-flyout-navigation-item>
-  <p-flyout-navigation-item identifier="accessories" label="Accessories">
+  </p-flyout-multilevel-item>
+  <p-flyout-multilevel-item identifier="accessories" label="Accessories">
     <p-link-tile
       href="#"
       label="Umbrella Martini Racing®"
@@ -341,8 +341,8 @@
     <a href="#">Heritage 2.0</a>
     <a href="#">Sports</a>
     <a href="#">View all</a>
-  </p-flyout-navigation-item>
-  <p-flyout-navigation-item identifier="model-cars" label="Model Cars">
+  </p-flyout-multilevel-item>
+  <p-flyout-multilevel-item identifier="model-cars" label="Model Cars">
     <p-link-tile
       href="#"
       label="911 Targa S 2.4 (1972)"
@@ -362,8 +362,8 @@
     <a href="#">Macan</a>
     <a href="#">Others</a>
     <a href="#">View all</a>
-  </p-flyout-navigation-item>
-  <p-flyout-navigation-item identifier="porsche-design" label="Porsche Design">
+  </p-flyout-multilevel-item>
+  <p-flyout-multilevel-item identifier="porsche-design" label="Porsche Design">
     <p-link-tile
       href="#"
       label="Sunglasses P´8508"
@@ -388,8 +388,8 @@
     <a href="#">View all</a>
     <h3>Footwear</h3>
     <a href="#">View all</a>
-  </p-flyout-navigation-item>
-  <p-flyout-navigation-item identifier="christmas" label="Christmas">
+  </p-flyout-multilevel-item>
+  <p-flyout-multilevel-item identifier="christmas" label="Christmas">
     <p-link-tile
       href="#"
       label="911 Dakar 992 Xmas Ltd. Edition"
@@ -406,8 +406,8 @@
     <a href="#">For Him</a>
     <a href="#">For Her</a>
     <a href="#">For Kids</a>
-  </p-flyout-navigation-item>
-</p-flyout-navigation>
+  </p-flyout-multilevel-item>
+</p-flyout-multilevel>
 
 <script type="module" src="main.js"></script>
 </body>
