feat: shorten app title for admin panel | sas

--- a/patterns/admin-panel/index.html
+++ b/patterns/admin-panel/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <p-canvas>
-  <a href="#" slot="title">Application Name</a>
+  <a href="#" slot="title">App Name</a>
 
   <div slot="header-start"></div>
 
